# e-paper-calendar

./: .env-sample  .gitignore  LICENSE  README.md  cron.sh  main.py  pyproject.toml
Fonts/: OFL.txt
draw/: __init__.py
google_calendar/: __init__.py
waveshare/: __init__.py  epd7in5b_V2.py  epdconfig.py
weather/: __init__.py
